小説周りを一気に

--- a/_includes/info-eien.liquid
+++ b/_includes/info-eien.liquid
@@ -14,10 +14,11 @@
     <h4>＜収録作品＞</h4>
   </header>
   <ul class="list__style--dot">
-    <li>海を商う</li>
-    <li>夢みる時差のために</li>
-    <li>作家と刑罰</li>
+    <li><a href="/novel/sea-buy/">海を商う</a></li>
+    <li><a href="/novel/dreamtime/">夢みる時差のために</a></li>
+    <li><a href="/novel/writer-crime/">作家と刑罰</a></li>
     <li>踊ろうポラリス</li>
+    <li><a href="/novel/heavens-hell/">昼の光から逃れるために</a></li>
     <li>くらやみのこども</li>
     <li>あなたの不在を愛する</li>
   </ul>
