--- a/_includes/info-airplane.liquid
+++ b/_includes/info-airplane.liquid
@@ -10,14 +10,14 @@
     <h4>＜収録作品＞</h4>
   </header>
   <ul class="list__style--dot">
-    <li>父の転生</li>
-    <li>少女ドーリィ</li>
+    <li><a href="/novel/father/">父の転生</a></li>
+    <li><a href="/novel/dolly/">少女ドーリィ</a></li>
     <li>青の国</li>
     <li>竜退治の街グリムカルダ西小川通り商店街</li>
     <li>花束マダム</li>
     <li>砂漠と釣りびと</li>
-    <li>ある冬の日の</li>
-    <li>新月をグラスに注いで</li>
+    <li><a href="/novel/winters/">ある冬の日の</a></li>
+    <li><a href="/novel/moonglass/">新月をグラスに注いで</a></li>
     <li>紙飛行機に眠る月</li>
   </ul>
   <blockquote>
