--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -188,6 +188,9 @@ blockquote {
 	}
 	&__flex {
 		@include flex;
+		@media (max-width: $sp-width) {
+			flex-wrap: wrap;
+		}
 		li {
 			margin-right: 1em;
 		}
@@ -243,6 +246,10 @@ blockquote {
 	max-width: 128rem;
 	margin: 0 auto;
 	padding: 0 4rem;
+	@media (max-width: $sp-width) {
+		padding: 0 4.266vw;
+		//padding: 0 5.333vw;
+	}
 }
 .flex {
 	@include flex;
@@ -362,71 +369,82 @@ blockquote {
 	}
 }
 .novel-list {
+	&__category-header {
+		margin-bottom: 1rem;
+		p {
+			font-size: 0.9em;
+			line-height: 1.5;
+		}
+	}
 	&__item {
-		border-top: 1px solid rgba($color: #48423b, $alpha: 0.1);
 		position: relative;
+		&:not(:first-child) {
+			border-top: 1px solid rgba($color: #48423b, $alpha: 0.1);
+		}
+		@media (max-width: $sp-width) {
+			&:first-child {
+				border-top: 1px solid rgba($color: #48423b, $alpha: 0.1);
+			}
+		}	
 		&-link {
 			display: block;
 			padding: 1rem;
 			transition: 0.3s ease-in-out;
 			&:hover {
 				background-color: rgba($color: $keyColor, $alpha: 0.05);	
-			}	
+			}
+		}
+		&-unlink {
+			padding: 1rem;
+			.novel-list__item-title {
+				color: inherit;
+				span {
+					@media (max-width: $sp-width) {
+						border-bottom: none;
+					}	
+				}
+			}
 		}
 		&-title {
 			font-weight: normal;
-			font-size: inherit;
+			font-size: 1.1em;
 			margin-bottom: 0;
 			color: $keyColorDark;
 			span {
 				line-height: 1;
-				//border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.3);
-			}
-		}
-		&.for-btn {
-			padding-top: 1.5rem;
-			padding-bottom: 0.5rem;
-			text-align: right
-		}
-		.btn {
-			font-size: 0.8em;
-			&:not(:hover) {
-				span {
-					opacity: 0.7;
+				@media (max-width: $sp-width) {
+					border-bottom: 1px solid rgba($color: $keyColorDark, $alpha: 0.3);
 				}	
 			}
 		}
 	}
-	&__wrapper {
-		//@include flex;
-		//flex-wrap: wrap;
-		//justify-content: space-between;
-		//align-items: flex-start;
-		column-count: 1;
-	  //column-gap: 1rem;
-	}
 	&__section {
-		//width: 48%;
 		width: 100%;
-		max-width: 80rem;
-		-webkit-column-break-inside: avoid;
-		page-break-inside: avoid;
-		break-inside: avoid;
 		border: 1px solid rgba($color: $keyColor, $alpha: 0.3);
-		padding: 2rem 2rem 1rem;
-		//padding: 2rem 0rem 2rem 1rem;
+		padding: 1rem 2rem;
 		position: relative;
+		display: flex;
+		align-items: center;
+		flex-direction: row-reverse;
 		@media (max-width: $sp-width) {
 			width: 100%;
+			flex-direction: column;
+			border-left: none;
+			border-right: none;
+			border-bottom: none;
+			padding: 1rem 0 2rem 0;
 		}
 		&:not(:last-child) {
 			margin-bottom: 2rem;
 		}
 		.novel-list__description {
-			margin-bottom: 1rem;
+			margin-bottom: 0;
 			font-size: 0.9em;
 			opacity: 0.6;
 			line-height: 1.5;
+			@media (max-width: $sp-width) {
+				margin-bottom: 1rem;
+			}	
 		}
 		&::before {
 			width: 20rem;
@@ -450,6 +468,52 @@ blockquote {
 				background-size: cover;
 			}
 		}
+		&.is-tree {
+			&::before {
+				background: url("/assets/img/hyoushi-tree.jpg") no-repeat center center;
+				background-size: cover;
+			}
+		}
+	}
+	&__header {
+		width: 30%;
+		min-width: 30rem;
+		flex: none;
+		@media (max-width: $sp-width) {
+			width: 100%;
+			min-width: inherit;
+			padding: 1rem;
+		}
+		& + .list {
+			flex-grow: 1;
+			margin-right: 2rem;
+			padding-right: 2rem;
+			border-right: 1px solid rgba($color: $keyColor, $alpha: 0.2);	
+			@media (max-width: $sp-width) {
+				margin-right: 0;
+				padding-right: 0;
+				border-right: none;
+			}	
+		}
+		.btn {
+			font-size: 0.8em;
+			position: absolute;
+			top: 2rem;
+			right: 1rem;
+			@media (max-width: $sp-width) {
+				top: inherit;
+				right: inherit;
+				position: relative;
+				width: 100%;
+				height: 3rem;
+				margin-bottom: 1rem;
+			}	
+			&:not(:hover) {
+				span {
+					opacity: 0.7;
+				}	
+			}
+		}
 	}
 	&__title {
 		font-size: 1.1em;
@@ -463,6 +527,9 @@ blockquote {
 		opacity: 0.5;
 		margin-bottom: 0;
 		line-height: 1.5;
+		@media (max-width: $sp-width) {
+			//margin-bottom: 0.5rem;
+		}
 	}
 	.novel-category {
 		font-size: 0.8em;
@@ -610,6 +677,9 @@ blockquote {
 		&-list {
 			@include flex;
 			font-size: 1.6rem;
+			@media (max-width: $sp-width) {
+				flex-wrap: wrap;
+			}	
 			li {
 				&:not(:last-child)::after {
 					content: "/";
@@ -641,6 +711,10 @@ blockquote {
 	&__section {
 		padding-top: 4rem;
 		padding-bottom: 4rem;
+		@media (max-width: $sp-width) {
+			padding-top: 2rem;
+			padding-bottom: 2rem;
+		}
 		&:not(:last-child):not(:first-child) {
 			//margin-top: 6.5rem;
 			border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.1);
