--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,8 @@ html {
 	box-sizing: border-box;
 	font-size: 62.5%;
 	height: 100%;
+	-ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 body {
   background-color: $bgColor; //fcf8f3; //fcf8f3
@@ -23,6 +25,9 @@ body {
   -webkit-text-size-adjust: none;
   -ms-touch-action: none !important;
 	touch-action: none !important;
+	-webkit-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
 }
 
 body.fixed {
@@ -264,24 +269,46 @@ blockquote {
 }
 .main {
 	min-height: calc(100dvh -  20rem);
+	@media (max-width: $sp-width) {
+		padding-bottom: 2rem;
+	}
 }
 .footer {
 	padding: 4rem 0;
+	@media (max-width: $sp-width) {
+		padding: 4rem 0 1.5rem;
+	}
 	.flex {
 		justify-content: space-between;
 		align-items: flex-end;
+		@media (max-width: $sp-width) {
+			display: block;
+		}
 	}
 	.logo__image {
 		margin-left: auto;
 		margin-bottom: 0.8rem;
+		@media (max-width: $sp-width) {
+			width: 12rem;
+			height: auto;
+			margin-bottom: 0.4rem;
+		}
 	}
 	&__nav-list {
 		display: grid;
 		grid-auto-flow: column;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(5, 1fr);
-		gap: 0.6rem 1.8rem;
+		//gap: 0.6rem 1.8rem;
+		gap: 0.6rem 0;
 		font-size: 1.2rem;
+		@media (max-width: $sp-width) {
+			display: block;
+			margin-bottom: 2rem;
+			li {
+				margin-bottom: 0.8rem;
+			}
+		}
 	}
 	&__info {
 		text-align: right;
@@ -803,6 +830,73 @@ blockquote {
 		}
 		li:last-child {
 			margin-bottom: 2rem;
+		}
+	}
+}
+
+.novel {
+	max-width: 38em;
+	//margin: 0 auto;
+	margin-left: 8rem;
+	font-size: 1.6rem;
+	line-height: 1.8;
+	overflow-wrap: break-word;
+	@media (max-width: $sp-width) {
+		font-size: min(calc((100vw - 3rem)/24), 1.6rem);
+		max-width: 24em;
+		margin: 0 auto;
+	}
+	&__header {
+		margin: 8rem 0;
+		@media (max-width: $sp-width) {
+			margin: 4rem 0;
+		}
+		&-title {
+			font-weight: normal;
+			font-size: 1.5em;
+			@media (max-width: $sp-width) {
+				font-size: 1.3em;
+				text-align: center;
+			}
+		}
+	}
+	&__body {
+		h1, h2, h3, h4, h5, h6 {
+			font-weight: normal;
+			font-size: 1em;
+		}
+		h2 {
+			font-size: 1.2em;
+			margin-top: 4em;
+			margin-bottom: 2em;
+		}
+		h3 {
+			font-size: 1em;
+			margin-bottom: 1em;
+		}
+		hr {
+			margin-top: 4em;
+			margin-bottom: 4em;
+		}
+		p {
+			&::before {
+				content: "";
+				width: 1em;
+				height: 1em;
+				display: inline-block;
+			}
+		}
+	}
+	&__footer {
+		font-size: 0.8em;
+		opacity: 0.8;
+		margin-top: 8rem;
+		margin-bottom: 4rem;
+		text-align: right;
+		@media (max-width: $sp-width) {
+			margin-top: 4rem;
+			font-size: 0.75em;
+			text-align: left;
 		}
 	}
 }
