--- a/_includes/layout-novel.liquid
+++ b/_includes/layout-novel.liquid
@@ -3,12 +3,26 @@ layout: layout.liquid
 template: novelPage
 ---
 
-<article class="novel page-width">
+<article class="novel font-serif">
   <header class="novel__header">
     <h1 class="novel__header-title">{{ title }}</h1>
   </header>
+  {% comment %}
+    マウス動かしたらメニュー表示させたい　stoneぽく
+  {% endcomment %}
   <div class="novel__body">{{ content }}</div>
   <div class="novel__footer">
+    <hr>
+    {%- for tag in tags -%}
+      {%- if tag == 'book-eien' -%}
+        <p>短編集『永遠の不在をめぐる』掲載作品</p>
+      {%- elsif tag == 'book-paperplane' -%}
+        <p>短編集『紙飛行機に眠る月』掲載作品</p>
+      {%- endif -%}
+    {%- endfor -%}
+    {%- if improvise_theme != blank -%}
+      <p>投稿元：即興小説トレーニング（サービス終了に伴いリンク切れ）<br>お題「{{improvise_theme}}」を元に執筆・改稿</p>
+    {%- endif -%}
     <a href="/">TOPへ戻る</a>
   </div>
 </article>
