--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -24,18 +24,18 @@
     <meta name="theme-color" content="#37807a">
 
     <!-- Social -->
-    <meta property="og:url" content="【ページのURL】 /">
+    <meta property="og:url" content="https://kokyushobo.com{{ page.url }}">
     <meta property="og:title" content="{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
-    <meta property="og:image" content="【サムネイル画像のURL】" />
+    <meta property="og:image" content="/assets/img/ogp.png" />
     <meta property="og:site_name" content="呼吸書房" />
     <meta property="og:locale" content="ja_JP" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@feelingskyblue" />
     <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
-    <meta name="twitter:image:src" content="【サムネイル画像のURL】" />
+    <meta name="twitter:image:src" content="/assets/img/ogp.png" />
   </head>
 
   <body class="{{ template | default: 'homePage' }}">
