--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}</title>
     <meta name="author" content="風野 湊">
-    <meta name="description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}">
+    <meta name="description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
 
     <!-- Assets -->
@@ -27,14 +27,14 @@
     <meta property="og:url" content="https://kokyushobo.com{{ page.url }}">
     <meta property="og:title" content="{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
+    <meta property="og:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
     <meta property="og:image" content="/assets/img/ogp.png" />
     <meta property="og:site_name" content="呼吸書房" />
     <meta property="og:locale" content="ja_JP" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@feelingskyblue" />
-    <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
+    <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
     <meta name="twitter:image:src" content="/assets/img/ogp.png" />
   </head>
 
@@ -47,10 +47,10 @@
         <nav class="footer__nav">
           <ul class="footer__nav-list">
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/">home / トップページ</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/about">about / 本サイトについて</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/about">about / このサイトについて</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/event">event / イベント出店情報</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/contact">contact / お問合せ・ご依頼など</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><!-- <a href="">privacy-policy / プライバシーポリシー</a> --></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/about/privacy">privacy / プライバシーポリシー</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/book">book-list / 書籍情報</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/novel">web-novel / 小説を読む</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/other">other-work / 紀行文・写真・朗読に触れる</a></li>
