固定ページレイアウト微調整
box-shadowの追加

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -371,10 +371,10 @@ blockquote {
 		.book-info__content {
 			width: 60%;
 		}
-		.list__flex {
-			flex-wrap: wrap;
-			row-gap: 1.5rem
-		}
+	}
+	.list__flex {
+		flex-wrap: wrap;
+		row-gap: 1rem
 	}
 	&__header {
 		@include flex;
@@ -802,16 +802,30 @@ blockquote {
 
 // 下層ページ
 .page {
+	&::after {
+		position: relative;
+		content: "";
+		display: block;
+		background-color: $bgColor;
+		width: 100%;
+		max-width: 72rem;
+		height: 8rem;
+		@media (max-width: $sp-width) {
+			display: none;
+		}
+	}
 	&__wrapper {
-		padding: 4rem 0;
+		padding: 4rem 0 0;
 		@media (max-width: $sp-width) {
 			padding: 3rem 0;
 		}
 		&[data-shadow="true"] {
-			max-width: 70rem;
-			margin-bottom: 4rem;
+			max-width: 72rem;
 			padding-right: 2rem;
-			box-shadow: 0 -5rem 5rem rgba($color: #48423b, $alpha: 0.1);
+			padding-bottom: 0;
+			box-shadow: 0 5rem 4rem rgba($color: #48423b, $alpha: 0.1);
+			position: relative;
+
 			@media (max-width: $sp-width) {
 				padding-right: 0;
 				box-shadow: none;
