Aboutページ作成

--- a/_includes/snipet-sns-list.liquid
+++ b/_includes/snipet-sns-list.liquid
@@ -5,6 +5,7 @@
   <li><a href="https://novelskey.tarbin.net/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.novelskey)</a></li>
   <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Skeb</a></li>
   <li><a href="https://feelingskyblue.fanbox.cc/" target="_blank" rel="noopenner noreferrer">pixiv FANBOX</a></li>
+  <li><a href="https://min.togetter.com/id/feelingskyblue" target="_blank" rel="noopenner noreferrer">min.t</a></li>
   <li><a href="https://www.youtube.com/channel/UCE-QxzMvKYiWPL6puEiD3Tw" target="_blank" rel="noopenner noreferrer">YouTube</a></li>
   <li><a href="https://soundcloud.com/4erb0uzpdh6n" target="_blank" rel="noopenner noreferrer">SoundCloud</a></li>
   <li><a href="https://marshmallow-qa.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">マシュマロ</a></li>
