--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,7 +21,8 @@ body {
     Meiryo,
     sans-serif;
   font-size: 1.4rem;
-  line-height: 1.7;
+  line-height: 1.8;
+	letter-spacing: 0.02em;
   -webkit-text-size-adjust: none;
   -ms-touch-action: none !important;
 	touch-action: none !important;
@@ -108,7 +109,6 @@ a:not(.unstyle):hover {
 	&--primary {
 		font-size: 1.8rem;
 		margin-bottom: 0.5rem;
-		font-weight: normal;
 	}
 	&--secondary {
 		font-size: 1.6rem;
@@ -121,6 +121,7 @@ a:not(.unstyle):hover {
 	&--default {
 		font-size: 1.4rem;
 		font-weight: normal;
+		line-height: 1.8;
 	}
 }
 
@@ -288,11 +289,11 @@ blockquote {
 	}
 	.logo__image {
 		margin-left: auto;
-		margin-bottom: 0.8rem;
+		margin-bottom: 1.2rem;
 		@media (max-width: $sp-width) {
 			width: 12rem;
 			height: auto;
-			margin-bottom: 0.4rem;
+			margin-bottom: 0.8rem;
 		}
 	}
 	&__nav-list {
@@ -313,6 +314,7 @@ blockquote {
 	}
 	&__info {
 		text-align: right;
+		line-height: 1.3;
 	}
 }
 .book-tab__wrapper {
@@ -847,13 +849,42 @@ blockquote {
 	&__section-title {
 		@include flex;
 		align-items: baseline;
-		margin-bottom: 2rem;
+		margin-bottom: 4rem;
+		position: relative;
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
+		&::before, &::after {
+			content: "";
+			width: calc(100% - 8rem);
+			height: 1px;
+			display: block;
+			position: absolute;
+			left: 4rem;
+			background-color: $keyColor;
+			opacity: 0.5;
+		}
+		&::before {
+			top: 0;
+		}
+		&::after {
+			bottom: 0;
+		}
 		@media (max-width: $sp-width) {
 			margin-bottom: 3rem;
 		}
 		&-txt {
 			font-size: 1.3rem;
 			opacity: 0.8;
+		}
+	}
+	&-txt__wrapper {
+		margin-top: 4rem;
+		&.for-profile {
+			padding-top: 4rem;
+			border-top: 1px solid $keyColor;
+		}
+		.logo__image {
+			margin: 1rem 0;
 		}
 	}
 	&__section-heading {
@@ -889,8 +920,24 @@ blockquote {
 			margin-bottom: 2rem;
 		}
 	}
-	.text__wrapper {
-		max-width: 70rem;
+	.twitter__wrapper {
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+		border: 1px solid $keyColor;
+		width: 75%;
+		opacity: 0.9;
+		@media (max-width: $sp-width) {
+			width: 100%;
+		}
+	}
+	.fleet__wrapper {
+		font-size: 0.9em;
+		margin-top: 4rem;
+		width: 75%;
+		opacity: 0.9;
+		@media (max-width: $sp-width) {
+			width: 100%;
+		}
 	}
 }
 
@@ -926,6 +973,7 @@ blockquote {
 		}
 	}
 	&__body {
+		letter-spacing: 0;
 		h1, h2, h3, h4, h5, h6 {
 			font-weight: normal;
 			font-size: 1em;
