--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -939,6 +939,14 @@ blockquote {
 			width: 100%;
 		}
 	}
+	.markdown__wrapper {
+		h2 {
+			font-size: 1em;
+			line-height: 1.8;
+			margin-top: 4rem;
+		}
+
+	}
 }
 
 .novel {
