--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -36,6 +36,15 @@
     <meta name="twitter:site" content="@feelingskyblue" />
     <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
     <meta name="twitter:image:src" content="/assets/img/ogp.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-08Z4HYPJRN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-08Z4HYPJRN');
+    </script>
   </head>
 
   <body class="{{ template | default: 'homePage' }}">
