リンク先、CSSなど修正

--- a/_includes/info-dream.liquid
+++ b/_includes/info-dream.liquid
@@ -29,5 +29,5 @@
   </blockquote>
 
   <p>Special Thanks<br>
-  表紙装画：ほがり仰夜さん <a href="https://twitter.com/torinomeBinzume" target="_blank" rel="noopenner noreferrer">https://twitter.com/torinomeBinzume</a></p>
+  表紙装画：ほがり仰夜さん <a href="https://rimmsrims.webnode.jp/" target="_blank" rel="noopenner noreferrer">https://rimmsrims.webnode.jp/</a></p>
 </section>
